fix letter spacing

--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -21,7 +21,7 @@
   --font-size-body: 14px;
   --letter-spacing-title: -0.03em;
   --letter-spacing-section: -0.02em;
-  --letter-spacing-paragraph: -0.01em;
+  --letter-spacing-instruction: -0.01em;
   --spacing0: 8px;
   --spacing1: 16px;
   --spacing2: 24px;
@@ -126,7 +126,6 @@ a {
   margin-top: var(--spacing1);
   margin-bottom: var(--spacing2);
   line-height: 1.6;
-  letter-spacing: var(--letter-spacing-paragraph);
 }
 .controls-container {
   z-index: 50;
@@ -164,6 +163,7 @@ a {
   padding: var(--spacing1);
   color: var(--color-gray1);
   margin-top: var(--spacing2);
+  letter-spacing: var(--letter-spacing-instruction);
 }
 .language-select {
   margin-bottom: var(--spacing1);
